View und Template für Blogpost-Details sowie CSS für die Website hinzugefügt

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,34 +1,13 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
+{% extends 'blog/base.html' %}
 
-    <style>
-      html {
-        color: tomato;
-
-      }
-    </style>
-
-  </head>
-  <body>
-    <h1>Hallo liebe Freunde</h1>
-    <p><strong>Willkommen in meinem Blog!</strong></p><br>
-
-    <div>
-        <p>published: 28.12.2020, 23:14</p>
-        <h2><a href="">Post #1</a></h2>
-        <p>Hejo, hier sind wir mit unserem neuen Blog über Raubfische. Hier unser erster Beitrag.</p>
-    </div>
-
-    <div>
-        <p>published: 28.12.2020, 23:15</p>
-        <h2><a href="">Post #2</a></h2>
-        <p>Und hier ist der zweite Beitrag</p>
-    </div>
-
-
-
-  </body>
-</html>
+{% block content %}
+            {% for post in posts %}
+              <div class="post">
+                  <div class="date"> 
+                    {{ post.published_date }}>
+                  </div>
+                  <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+                  <p>{{ post.text|linebreaksbr }}</p>
+              </div>
+            {% endfor %}
+{% endblock %}
