--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,47 +4,41 @@
   margin-top: 0;
   padding: 20px 40px 20px 40px;
 }
-
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
   color: #ffffff;
   font-size: 36pt;
   text-decoration: none;
 }
-
 .content {
   margin-left: 40px;
   margin-right: 40px;
 }
-
 h1, h2, h3, h4 {
   font-family: 'Lobster', cursive;
   /*font-family: 'Ubuntu', sans-serif;*/
 }
-
 .date {
   color: #828282;
 }
-
 .save {
   float: right;
 }
-
+#button {
+margin-bottom: 10px;
+}
 .post-form textarea, .post-form input {
   width: 100%;
 }
-
 .top-menu, .top-menu:hover, .top-menu:visited {
   color: #ffffff;
   float: right;
   font-size: 26pt;
   margin-right: 20px;
 }
-
 .post {
   margin-bottom: 30px;
   color: #434343;
 }
-
 .post h2 a, .post h2 a:visited {
   color: #434343;
 }
