--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,15 +25,25 @@
                 </div>
             </div>
         </div>
-
+        
         <div class="content container-fluid">
             <div class="row">
                 <div class="col-sm">
-                {% block content %}
-                {% endblock %}
+                    {% block content %}
+                    {% endblock %}
                 </div>
             </div>
         </div>
-
-</body>
-</html>
+        
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm">
+                        <div class="page-header">
+                            <h4><a href="/">Django Girls Blog</a></h4>
+                            <p>Copyright 2021 by Superlearner</p>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </body>
+    </html>
